--- a/src/components/Callout/Callout.css
+++ b/src/components/Callout/Callout.css
@@ -1,9 +1,10 @@
 .callout {
-  padding: 15rem 0;
-  background: url("../../img/bg-callout.jpg");
+  padding: 2.5rem 0;
+  background: url("../../img/bg-callout.jpg") no-repeat fixed center;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+
 
   
 }
